--- a/app/src/main/res/drawable/recycler_view_element_bottom_border.xml
+++ b/app/src/main/res/drawable/recycler_view_element_bottom_border.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="-2dp" android:left="-2dp" android:right="-2dp">
         <shape>
-            <solid android:color="#ffffff"/>
-            <stroke android:color="#bbbbbb" android:width="1dp"/>
+            <solid android:color="?attr/background"/>
+            <stroke android:color="?attr/on_background_hint" android:width="1dp"/>
         </shape>
     </item>
 </layer-list>
