--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,24 +21,32 @@
     <color name="on_surface_l">#000000</color>
     <color name="on_error_l">#ffffff</color>
     <color name="on_background_hint_l">#404040</color>
+    <color name="top_bar_l">#2fc9b5</color>
+    <color name="status_bar_l">#009785</color>
+    <color name="on_top_bar_l">#000000</color>
+    <color name="on_background_divider_l">#cdcdcd</color>
 
 
     <!-- dark mode -->
-    <color name="primary_d">#009785</color>
-    <color name="primary_light_d">#2fc9b5</color>
-    <color name="primary_dark_d">#009785</color>
-    <color name="secondary_d">#bc8a00</color>
-    <color name="secondary_light_d">#f4ba00</color>
-    <color name="secondary_dark_d">#bc8a00</color>
+    <color name="primary_d">#2fc9b5</color>
+    <color name="primary_light_d">#a8ffff</color>
+    <color name="primary_dark_d">#2fc9b5</color>
+    <color name="secondary_d">#f4d256</color>
+    <color name="secondary_light_d">#ffff87</color>
+    <color name="secondary_dark_d">#bea122</color>
     <color name="on_primary_d">#000000</color>
     <color name="on_secondary_d">#000000</color>
-    <color name="on_background_d">#ffffff</color>
+    <color name="on_background_d">#dddddd</color>
     <color name="error_d">#cf6679</color>
     <color name="background_d">#121212</color>
     <color name="surface_d">#202020</color>
-    <color name="on_surface_d">#ffffff</color>
+    <color name="on_surface_d">#dddddd</color>
     <color name="on_error_d">#000000</color>
     <color name="on_background_hint_d">#aaaaaa</color>
+    <color name="top_bar_d">#202020</color>
+    <color name="status_bar_d">#000000</color>
+    <color name="on_top_bar_d">#dddddd</color>
+    <color name="on_background_divider_d">#202020</color>
 
 
 
